--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.1.1",
+    "@headlessui/vue": "^1.7.4",
+    "@heroicons/vue": "^2.0.13",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.1.8"
   }
 }
