--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@headlessui/vue": "^1.7.4",
     "@heroicons/vue": "^2.0.13",
+    "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
     "lodash": "^4.17.21",
